# TokenRouter

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  custom_strategy.py  proxy_server.py
tests/: test_billing.py  test_classifier.py  test_fallback.py  test_keys.py  test_models.py  test_proxy.py  test_proxy_auth.py
tokenrouter/: __init__.py  __main__.py  billing.py  classifier.py  config.py  exceptions.py  fallback.py  keys.py  models.py  proxy.py  types.py
tokenrouter/dashboard/: index.html
tokenrouter/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_compatible.py
