[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenrouter"
version = "0.1.0"
description = "Lightweight AI model intelligent routing SDK — BYOK, auto-select optimal model based on prompt content"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "TokenRouter Contributors" }]
keywords = ["ai", "llm", "routing", "openai", "anthropic", "google", "deepseek", "byok"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
proxy = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
]
yaml = ["pyyaml>=6.0"]
all = ["tokenrouter[proxy,yaml]"]
dev = [
    "tokenrouter[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
tokenrouter = "tokenrouter.__main__:main"

[project.urls]
Homepage = "https://github.com/tokenrouter/tokenrouter"
Repository = "https://github.com/tokenrouter/tokenrouter"

[tool.hatch.build.targets.wheel]
packages = ["tokenrouter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
